--- a/hello.html
+++ b/hello.html
@@ -3,6 +3,7 @@
         <title>git commands</title>
         <body>
             <h1>Welcome to my website</h1>
+            <h2>this is second heading</h2>
             hello this is mruga
 
         </body>
