--- a/hello.html
+++ b/hello.html
@@ -2,8 +2,9 @@
     <head>
         <title>git commands</title>
         <body>
+            <h1>Welcome to my website</h1>
             hello this is mruga
-            
+
         </body>
     </head>
 </html>
